# glostat

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.bs_docs/GLOSTAT/2026-05-01/R-20260501-001/00_index/: index.md
.bs_docs/GLOSTAT/2026-05-01/R-20260501-001/01_chat/: transcript.md
.bs_docs/GLOSTAT/2026-05-01/R-20260501-001/02_decisions/: decisions.md
.github/ISSUE_TEMPLATE/: alpha_thesis.md  bug_report.md  enhancement.md
.github/workflows/: ci.yml
configs/: budget.yaml  gating.yaml  invariants.yaml  kill_criteria.yaml  markets.yaml  universes.yaml
configs/universes/: kosdaq150_top30.txt  kospi200.txt  kospi200_top30.txt  russell2k_top200_proxy.txt  sp500_top50.txt
docs/: CALIBRATION.md  CALIBRATION_AUDIT_2026-05-02.md  CONFIDENCE_V2.md  DART_API_SETUP.md  DCA_SIZING.md  ECOS_API_SETUP.md  EMPIRICAL_RESULTS_2026-05-02.md  EXAMPLES.md  KIS_API_SETUP.md  KRX_API_FIELD_REQUEST_2026-05-04.md  KRX_API_PLAN_2026-05-04.md  KRX_OPENAPI_VERIFIED_2026-05-04.md  KR_SUPPORT.md  MIGRATION_v0.7_TO_v1.0.md  QUICKSTART.md  THESIS_LANDSCAPE_2026-05-03.md  V15_SECTOR.md  V16_CALENDAR.md  V17_THESIS_IDEATION.md  VKOSPI_SETUP.md
docs/post_mortem/: SPRINT5_FAIL_post_mortem.md
docs/research/: E_NARRATIVE_design.md  kill_criteria_design.md  snapshot_broker_design.md
docs/ssot/: PLAN_v0.1.md  PLAN_v0.2.md  PLAN_v0.3.1_patched.md  PLAN_v0.3.md  PLAN_v0.4.md  PLAN_v0.5.md  PLAN_v0.6.md  PLAN_v1.0.md  v0.4_tuning_proposals.md
scripts/: compare_sk_innovation.py  generate_synthetic_vkospi.py  measure_composite_oos_quality.py  measure_oos_factor_impact.py  rerun_insider_cluster_hindcast.py  rerun_pead_hindcast.py  run_analyst_revision_hindcast.py  run_phase1c_hindcast.py  run_phase1d.py
src/glostat/: __init__.py  cli.py  cli_gating_print.py  cli_hindcast.py  cli_hindcast_live.py  cli_hindcast_report.py  cli_kr_hindcast.py  cli_kr_vkospi_hindcast.py  cli_mock_universe.py  cli_mocks.py  cli_predict_print.py  cli_predictor.py  cli_scan.py  cli_universe.py  cli_us_regime_hindcast.py  cli_verdict.py  screen.py  verdict_builder.py
src/glostat/core/: __init__.py  errors.py  seeded_rng.py  types.py
src/glostat/data/: __init__.py  bigdata_client.py  ccxt_client.py  cftc_client.py  commodity_client.py  dart_client.py  dart_types.py  data_router.py  ecos_client.py  ecos_types.py  entity_map.py  kis_client.py  kr_calendar_client.py  krx_short_client.py  naver_kr_client.py  prompt_versioning.py  regime_us_client.py  retry.py  sec_edgar_client.py  sec_edgar_form4.py  sec_edgar_parsers.py  sec_edgar_types.py  sector_classifier_kr.py  sector_mapper.py  sector_stats.py  snapshot_broker.py  toss_client.py  universe.py  vkospi_client.py  vkospi_csv_provider.py  vkospi_parquet_provider.py  vkospi_resolvers.py  yfinance_client.py  yfinance_parsers.py  yfinance_types.py
src/glostat/experts/: __init__.py  e_analyst_revision.py  e_commodity_index_kr.py  e_commodity_ts.py  e_fomc_drift.py  e_foreign_reversal.py  e_fund_flow.py  e_fundamental.py  e_fundamental_kr.py  e_fundamental_kr_cyclical.py  e_funding_carry.py  e_fx_carry.py  e_insider_cluster.py  e_insider_kr.py  e_insider_velocity_kr.py  e_intraday_flow_kr.py  e_macro_kr.py  e_pead.py  e_pead_kr.py  e_regime_us.py  e_sector_rotation.py  e_short_selling_kr.py  e_time.py  e_vkospi_mood_kr.py  ichimoku.py
src/glostat/gating/: __init__.py  anti_herd.py  composer.py  minority_premium.py  network.py
src/glostat/phase1b/: __init__.py  cli.py  form4_disk_cache.py  hindcast_runner.py  orchestrator.py  price_cache.py  runner_commodity_ts.py  runner_fomc_drift.py  runner_fx_carry.py  runner_insider_cluster.py  runner_pead.py  runner_sector_rotation.py  types.py
src/glostat/predictor/: __init__.py  calibration.py  composite.py  confidence_v2.py  dca_sizing.py  honesty.py  kr_universe.py  thesis_wrappers.py  thesis_wrappers_static.py  types.py
src/glostat/replay/: __init__.py  kill_criteria.py  live_hindcast.py  live_hindcast_network.py  live_sector_stats.py  metrics.py  phase1d_hindcast.py  phase1d_report.py  phase_kr_eval.py  phase_kr_hindcast.py  phase_kr_report.py  phase_kr_vkospi_mood_hindcast.py  phase_us_regime_hindcast.py  sprint4_gate.py  validation_harness.py
src/glostat/risk/: __init__.py  compliance_gate.py
tests/: conftest.py  test_anti_herd.py  test_calibration.py  test_ccxt_client.py  test_cftc_client.py  test_cli.py  test_cli_predict_v1.py  test_cli_scan.py  test_commodity_client.py  test_composer.py  test_composite.py  test_composite_v2.py  test_confidence_v2.py  test_dart_client.py  test_data_router.py  test_data_router_kr.py  test_dca_sizing.py  test_e_analyst_revision.py  test_e_commodity_index_kr.py  test_e_commodity_ts.py  test_e_foreign_reversal.py  test_e_foreign_reversal_universe.py  test_e_fund_flow.py  test_e_fundamental.py  test_e_fundamental_kr.py  test_e_fundamental_kr_cyclical.py  test_e_funding_carry.py  test_e_fx_carry.py  test_e_insider_kr.py  test_e_insider_velocity_kr.py  test_e_intraday_flow_kr.py  test_e_macro_kr.py  test_e_pead_kr.py  test_e_regime_us.py  test_e_short_selling_kr.py  test_e_time.py  test_e_vkospi_mood_kr.py  test_ecos_client.py  test_expert_fail_fast.py  test_gating_network.py  (+42 more)
tests/fixtures/: __init__.py  aapl_mock.json  sample_13f_infotable.xml
tests/phase1b/: test_experts_unit.py  test_form4_disk_cache.py  test_form4_parser.py  test_hindcast_runner.py  test_orchestrator.py  test_runners_mock.py
