[project]
name = "glostat"
version = "0.7.0"
description = "GLOSTAT — Validation framework for swing-horizon equity alpha theses (deterministic hindcast, snapshot broker, kill criteria, free-stack data)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "GLOSTAT contributors" }]
keywords = [
    "alpha",
    "hindcast",
    "validation",
    "equity",
    "free-stack",
    "snapshot-broker",
    "kill-criteria",
    "yfinance",
    "sec-edgar",
    "compliance-gate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "structlog>=24.4.0",
    "anyio>=4.7.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
]

[project.scripts]
glostat = "glostat.cli:main"

[project.urls]
Homepage      = "https://github.com/glostat/glostat"
Repository    = "https://github.com/glostat/glostat"
Documentation = "https://github.com/glostat/glostat/tree/main/docs"
Issues        = "https://github.com/glostat/glostat/issues"
PostMortem    = "https://github.com/glostat/glostat/blob/main/docs/post_mortem/SPRINT5_FAIL_post_mortem.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glostat"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PL", "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
disallow_untyped_decorators = true
files = ["src/glostat"]

[[tool.mypy.overrides]]
module = ["polars.*", "pyarrow.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "invariant: GLOSTAT INV-GS unit test",
    "slow: long-running test",
    "network: hits external network — skipped unless NETWORK_TESTS=1",
]
