[project]
name = "glostat"
version = "1.6.0"
description = "GLOSTAT — Evidence-based probability predictor for global equities (개선된 TITAN의 open-source 진화형). Brier-calibrated multi-thesis ensemble. Information tool, not investment advice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GLOSTAT contributors" }]
keywords = [
    "alpha",
    "hindcast",
    "validation",
    "equity",
    "free-stack",
    "snapshot-broker",
    "kill-criteria",
    "yfinance",
    "sec-edgar",
    "compliance-gate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "structlog>=24.4.0",
    "anyio>=4.7.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
]

[project.scripts]
glostat = "glostat.cli:main"

[project.urls]
Homepage      = "https://github.com/deximple/glostat"
Repository    = "https://github.com/deximple/glostat"
Documentation = "https://github.com/deximple/glostat/tree/main/docs"
Issues        = "https://github.com/deximple/glostat/issues"
PostMortem    = "https://github.com/deximple/glostat/blob/main/docs/post_mortem/SPRINT5_FAIL_post_mortem.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glostat"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PL", "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
# HTML test fixtures contain unavoidable long lines
"tests/test_naver_kr_client.py" = ["E501", "ARG", "PLR2004"]
# Phase 1B/1C/1D research artifacts (empirical screening, not production)
"scripts/run_phase1*.py" = ["E501", "PLC0415", "C408", "SIM108", "B007", "E741", "F841", "RUF046", "RUF059"]
"src/glostat/phase1b/*" = ["E501", "PLC0415", "C408", "SIM108", "B007", "E741", "F841", "RUF046", "RUF059"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
disallow_untyped_decorators = true
files = ["src/glostat"]

[[tool.mypy.overrides]]
module = ["polars.*", "pyarrow.*", "structlog.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "invariant: GLOSTAT INV-GS unit test",
    "slow: long-running test",
    "network: hits external network — skipped unless NETWORK_TESTS=1",
]
